# amr-gz-sim-example

./: README.md
mobile_robot_gz_sim/: CMakeLists.txt  package.xml  readme.md
mobile_robot_gz_sim/behavior_trees/: navigate_through_poses_w_replanning_and_recovery.xml
mobile_robot_gz_sim/configs/: mobile_robot_bridge.yaml
mobile_robot_gz_sim/launch/: gz_amr_bringup.launch.py  navigation_launch_gz.py  navigation_launch_gz_static.py  run_simulation_static_filter.launch.py  simulation.launch.py  simulation_static.launch.py  simulation_static_filter.launch.py  spawn_robot.launch.py
mobile_robot_gz_sim/maps/: depot.yaml  depot_edit.pgm
mobile_robot_gz_sim/models/map/meshes/: map.stl
mobile_robot_gz_sim/params/: nav2_params.yaml  nav2_params_gz.yaml  nav2_params_gz_static.yaml  nav2_params_gz_static_filter.yaml  nav2_params_gz_static_filter2.yaml
mobile_robot_gz_sim/scripts/: README.md  gen_map_stl.py  mobile_robot_sim.sh  move_command_longrun_test.py
mobile_robot_gz_sim/urdf/: mobile_robot_gz.urdf.xacro
mobile_robot_gz_sim/worlds/: depot.sdf
