<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mobile_robot_gz_sim</name>
  <version>0.0.0</version>
  <description>Gz sim navigation simulation for mobile robot (MiR 250 based)</description>
  <maintainer email="amr@todo.todo">amr</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ammr_common_config</exec_depend>
  <exec_depend>amr_bringup</exec_depend>
  <exec_depend>mobile_robot_description</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_minimal_tb3_sim</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
